# checkmail

./: Cargo.toml  README.md
src/: lib.rs
